CHG: gramatical changes made
Signed-off-by: Vicente Ortiz <progressio.vicente@gmail.com>

--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -81,7 +81,7 @@
     "amendments": {
       "title": "Organic Amendments",
       "mame": "Bioamino-L",
-      "description1": "It is a Liquid Organic amendment to activate soils, with a high content of organic matter of non-humic origin, fulvic acids, very high biological quality polypeptides, macronutrients (Nitrogen, Phosphorus, Potassium, Calcium, Magnesium) and micronuirienies (Zinc, Manganese, Iron ).",
+      "description1": "It is a Liquid Organic amendment to activate soils, with a high content of organic matter of non-humic origin, fulvic acids, very high biological quality polypeptides, macronutrients (Nitrogen, Phosphorus, Potassium, Calcium, Magnesium) and micronutrientes (Zinc, Manganese, Iron ).",
       "description2": "Provides a substantial improvement in the physico-chemical properties of the soil.",
       "description3": "It stimulates the formation of an organic surface layer in the soil, due to the contribution of active organic matter.",
       "description4": "It favors the organic village and the micro organisms of the soil.",
